@@ -30,6 +30,10 @@ Bugzilla   : 22514
 Description: Update RHEL5.5 kernel to 2.6.18-194.17.1.el5
              Update OEL5.5  kernel to 2.6.18-194.17.1.0.1.el5.
 
+Severity   : normal
+Bugzilla   : 22660
+Description: lustre grants flock exclusive locks to two fd's in the same process
+
 --------------------------------------------------------------------------------
 
 2010-07-15  Oracle, Inc.
